checkbox (0.16.14) UNRELEASED; urgency=low

    [ Chris Gregan ]
  * jobs/wireless.txt.in - added tests for checking 80211 modules loaded and a 
    script to scripts to execute that check named wireless_ext. Test added to run 
    iwconfig query against all devices found on the system.

  * jobs/ethernet.txt.in - added test for running ethtool queries against all 
    devices found on the system.

  [ Brendan Donegan ]
  * jobs/resources.txt.in, jobs/power-management.txt.in - refactor rtc test so
    that it actually tests the RTC instead of just checking for its presence.
    Also create a resource job to allow other jobs to determine if an RTC is
    present. (LP: #1184733)

 -- Sylvain Pineau <sylvain.pineau@canonical.com>  Fri, 18 Oct 2013 15:36:53 -0400

checkbox (0.16.13) saucy; urgency=low

  [ Po-Hsu Lin ]
  * jobs/keys.txt.in - adde keys/microphone-mute to test the mute key for 
    microphone.

  [ Brendan Donegan ]
  * jobs/resource.txt.in, jobs/virtualization.txt.in - added kvm resource job
    which states whether the hardware supports KVM. Remove kvm_ok job and
    use the kvm resource job to determine if kvm_check_vm should run
    (LP: #1236776)
  * jobs/keys.txt.in - added keys/keyboard-backlight job to test keyboard
    backlight toggle key.
  * scripts/network - restore other interfaces that were downed prior to running
    the network test (LP: #1238570)

  [ Daniel Manrique ]
  * jobs/virtualization.txt.in: Set the kvm_check_vm test to run as root, to
    ensure we're running under kvm and not tcg. Modified tests for environment
    variables accordingly since we need to account for presence of proxy
    variables.
  * scripts/gpu_test: Revamped way of launching and stopping glxgears
    windows/threads, to make 100% sure that we find and close them all,
    avoiding leftover threads that cause the script not to exit.
    (LP: #1237199)
  * plugins/backend_info: Resolve and use full path to the backend script to